remove useless IMeter interface